--- a/EarthQuakeReporter/app/src/main/res/layout/list.xml
+++ b/EarthQuakeReporter/app/src/main/res/layout/list.xml
@@ -8,17 +8,24 @@
     xmlns:tools="http://schemas.android.com/tools">
     <TextView
         android:id="@+id/Magnitude"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:layout_width="36dp"
+        android:layout_height="36dp"
+        android:layout_gravity="center_vertical"
+        android:background="@drawable/magnitude_circle"
+        android:fontFamily="sans-serif-medium"
+        android:gravity="center"
+        android:textColor="@android:color/white"
+        android:textSize="16sp"
+        tools:text="8.9"
         />
     <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:orientation="vertical"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:paddingLeft="16dp">
+        android:paddingLeft="20dp"
+        android:paddingRight="40dp">
             <TextView
                 android:id="@+id/SeconadryLoction"
                 android:layout_width="wrap_content"
@@ -37,7 +44,7 @@
     <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:orientation="vertical"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:paddingLeft="16dp">
