added hhtp network requests

--- a/EarthQuakeReporter/app/src/main/res/layout/list.xml
+++ b/EarthQuakeReporter/app/src/main/res/layout/list.xml
@@ -3,8 +3,11 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="16dp"
+    android:layout_height="?android:attr/listPreferredItemHeight"
+    android:paddingEnd="16dp"
+    android:paddingLeft="16dp"
+    android:paddingRight="16dp"
+    android:paddingStart="16dp"
     xmlns:tools="http://schemas.android.com/tools">
     <TextView
         android:id="@+id/Magnitude"
@@ -19,43 +22,57 @@
         tools:text="8.9"
         />
     <LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:orientation="vertical"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
         android:layout_weight="1"
-        android:paddingLeft="20dp"
-        android:paddingRight="40dp">
+        android:orientation="vertical">">
             <TextView
                 android:id="@+id/SeconadryLoction"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="13sp"
-                android:alpha=".7"
+                android:ellipsize="end"
+                android:fontFamily="sans-serif-medium"
+                android:maxLines="1"
                 android:textAllCaps="true"
-                android:fontFamily="Oswald"/>
+                android:textColor="@color/textColorEarthquakeDetails"
+                android:textSize="12sp"
+                tools:text="30km S of"/>
             <TextView
                     android:id="@+id/PrimaryLoction"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textStyle="bold"
-                    android:fontFamily="ubuntu"/>
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:ellipsize="end"
+                android:maxLines="2"
+                android:textColor="@color/textColorEarthquakeLocation"
+                android:textSize="16sp"
+                tools:text="Long placeholder location that should wrap to more than 2 lines of text"/>
     </LinearLayout>
     <LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:orientation="vertical"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:paddingLeft="16dp">
+        android:layout_gravity="center_vertical"
+        android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
+        android:orientation="vertical">
             <TextView
-                    android:id="@+id/Date"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                android:id="@+id/Date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end"
+                android:textColor="@color/textColorEarthquakeDetails"
+                android:textSize="12sp"
+                tools:text="Mar 6, 2010"/>
             <TextView
-                    android:id="@+id/time"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                android:id="@+id/time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end"
+                android:textColor="@color/textColorEarthquakeDetails"
+                android:textSize="12sp"
+                tools:text="3:00 PM" />
     </LinearLayout>
 </LinearLayout>
 
